--- a/index.html
+++ b/index.html
@@ -6,45 +6,81 @@
         <title>Personal Budget</title>
         <link rel="stylesheet" href="reset.css" />
         <link rel="stylesheet" href="main.css" />
+
+        <!-- This is an SEO Change -->
+        <meta
+            name="description"
+            content="Manage your personal budget with our free budget management app."
+        />
+
+        <!-- This is an SEO Change -->
+        <meta
+            name="keywords"
+            content="personal budget, budget management, financial plan, expenses"
+        />
+
+        <!-- This is an SEO Change -->
+        <link rel="canonical" href="http://167.71.190.112/pb/" />
     </head>
 
     <body>
-        <div class="menu">
-            <ul>
-                <li><a href="">Homepage</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="https://google.com">Google</a></li>
-            </ul>
-        </div>
+        <!-- This is an A11y Change -->
+        <a href="#main" class="skip">Skip to content</a>
 
-        <div class="hero">
+        <!-- This is a Semantic HTML Change -->
+        <!-- This is an A11y Change -->
+        <nav aria-label="Main Navigation">
+            <ul>
+                <!-- This is an A11y Change -->
+                <li><a href="" aria-label="Homepage">Homepage</a></li>
+                <!-- This is an A11y Change -->
+                <li><a href="about.html" aria-label="About Us">About</a></li>
+                <!-- This is an A11y Change -->
+                <li><a href="login.html" aria-label="Login">Login</a></li>
+                <li>
+                    <!-- This is an A11y Change -->
+                    <a href="https://www.google.com" aria-label="Google"
+                        >Google</a
+                    >
+                </li>
+            </ul>
+        </nav>
+
+        <!-- This is an A11y Change -->
+        <div class="hero" title="background image of smartphone and laptop">
             <h1>Personal Budget</h1>
             <h2>A personal-budget management app</h2>
         </div>
 
-        <div class="container center">
+        <!-- This is a Semantic HTML Change -->
+        <main class="center">
             <div class="page-area">
-                <div class="text-box">
-                    <h1>Stay on track</h1>
+                <!-- This is a Semantic HTML Change -->
+                <article class="text-box">
+                    <!-- This is a Semantic HTML Change -->
+                    <header>Stay on track</header>
                     <p>
                         Do you know where you are spending your money? If you
                         really stop to track it down, you would get surprised!
                         Proper budget management depends on real data... and
                         this app will help you with that!
                     </p>
-                </div>
+                </article>
 
-                <div class="text-box">
-                    <h1>Alerts</h1>
+                <!-- This is a Semantic HTML Change -->
+                <article class="text-box">
+                    <!-- This is a Semantic HTML Change -->
+                    <header>Alerts</header>
                     <p>
                         What if your clothing budget ended? You will get an
                         alert. The goal is to never go over the budget.
                     </p>
-                </div>
+                </article>
 
-                <div class="text-box">
-                    <h1>Results</h1>
+                <!-- This is a Semantic HTML Change -->
+                <article class="text-box">
+                    <!-- This is a Semantic HTML Change -->
+                    <header>Results</header>
                     <p>
                         People who stick to a financial plan, budgeting every
                         expense, get out of debt faster! Also, they to live
@@ -52,57 +88,23 @@
                         fear... because they know it is all good and accounted
                         for.
                     </p>
-                </div>
+                </article>
 
-                <div class="text-box">
-                    <h1>Free</h1>
+                <!-- This is a Semantic HTML Change -->
+                <article class="text-box">
+                    <!-- This is a Semantic HTML Change -->
+                    <header>Free</header>
                     <p>
                         This app is free!!! And you are the only one holding
                         your data!
                     </p>
-                </div>
-
-                <div class="text-box">
-                    <h1>Stay on track</h1>
-                    <p>
-                        Do you know where you are spending your money? If you
-                        really stop to track it down, you would get surprised!
-                        Proper budget management depends on real data... and
-                        this app will help you with that!
-                    </p>
-                </div>
-
-                <div class="text-box">
-                    <h1>Alerts</h1>
-                    <p>
-                        What if your clothing budget ended? You will get an
-                        alert. The goal is to never go over the budget.
-                    </p>
-                </div>
-
-                <div class="text-box">
-                    <h1>Results</h1>
-                    <p>
-                        People who stick to a financial plan, budgeting every
-                        expense, get out of debt faster! Also, they to live
-                        happier lives... since they expend without guilt or
-                        fear... because they know it is all good and accounted
-                        for.
-                    </p>
-                </div>
-
-                <div class="text-box">
-                    <h1>Free</h1>
-                    <p>
-                        This app is free!!! And you are the only one holding
-                        your data!
-                    </p>
-                </div>
+                </article>
             </div>
-        </div>
+        </main>
 
-        <div class="bottom">
+        <!-- This is a Semantic HTML Change -->
+        <footer>
             <div class="center">All rights reserved &copy; Carl Pittenger</div>
-        </div>
+        </footer>
     </body>
 </html>
