--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Personal Budget</title>
-        <link rel="stylesheet" href="reset.css" />
-        <link rel="stylesheet" href="main.css" />
-
         <!-- This is an SEO Change -->
         <meta
             name="description"
             content="Manage your personal budget with our free budget management app."
         />
-
         <!-- This is an SEO Change -->
         <meta
             name="keywords"
             content="personal budget, budget management, financial plan, expenses"
         />
-
         <!-- This is an SEO Change -->
         <link rel="canonical" href="http://167.71.190.112/pb/" />
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="main.css" />
+        <title>Personal Budget</title>
     </head>
 
     <body>
@@ -32,7 +29,7 @@
         <nav aria-label="Main Navigation">
             <ul>
                 <!-- This is an A11y Change -->
-                <li><a href="" aria-label="Homepage">Homepage</a></li>
+                <li><a href="" aria-label="Homepage">Home</a></li>
                 <!-- This is an A11y Change -->
                 <li><a href="about.html" aria-label="About Us">About</a></li>
                 <!-- This is an A11y Change -->
@@ -56,9 +53,8 @@
         <main class="center">
             <div class="page-area">
                 <!-- This is a Semantic HTML Change -->
-                <article class="text-box">
-                    <!-- This is a Semantic HTML Change -->
-                    <header>Stay on track</header>
+                <article>
+                    <h1>Stay on track</h1>
                     <p>
                         Do you know where you are spending your money? If you
                         really stop to track it down, you would get surprised!
@@ -68,9 +64,8 @@
                 </article>
 
                 <!-- This is a Semantic HTML Change -->
-                <article class="text-box">
-                    <!-- This is a Semantic HTML Change -->
-                    <header>Alerts</header>
+                <article>
+                    <h1>Alerts</h1>
                     <p>
                         What if your clothing budget ended? You will get an
                         alert. The goal is to never go over the budget.
@@ -78,9 +73,8 @@
                 </article>
 
                 <!-- This is a Semantic HTML Change -->
-                <article class="text-box">
-                    <!-- This is a Semantic HTML Change -->
-                    <header>Results</header>
+                <article>
+                    <h1>Results</h1>
                     <p>
                         People who stick to a financial plan, budgeting every
                         expense, get out of debt faster! Also, they to live
@@ -91,9 +85,8 @@
                 </article>
 
                 <!-- This is a Semantic HTML Change -->
-                <article class="text-box">
-                    <!-- This is a Semantic HTML Change -->
-                    <header>Free</header>
+                <article>
+                    <h1>Free</h1>
                     <p>
                         This app is free!!! And you are the only one holding
                         your data!
@@ -104,7 +97,7 @@
 
         <!-- This is a Semantic HTML Change -->
         <footer>
-            <div class="center">All rights reserved &copy; Carl Pittenger</div>
+            <p class="center">All rights reserved &copy; Carl Pittenger</p>
         </footer>
     </body>
 </html>
